# libmobile-bgb

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.am  README.md  configure.ac  make-mingw  meson.build  test.py
releng/: all.sh  build-mingw-winpthreads.sh  build-musl.sh  build-winxp-pthreads.sh  dist.sh  release-mingw.sh  release-musl.sh  release.sh
source/: bgblink.c  bgblink.h  main.c  socket.c  socket.h  socket_impl.c  socket_impl.h
tools/: cross-x86_64-w64-mingw32.cmake  cross-x86_64-w64-mingw32.ini  flags-debug-nosanit.sh  flags-debug.sh  flags-release.sh
